# IMDB_transfer_learning

./: Makefile  README.md  pyproject.toml
notebooks/: transfer_learning.ipynb
utils/: create_folders.sh  functions.py  get_glove_embeddings.sh
