[tool.poetry]
name = "imdb-transfer-learning"
version = "0.1.0"
description = "This project aims to create a transfer learning algorithm using BERT and apply it on IMDB dataset."
authors = ["Pedro-A-D-S <pedroalves0409@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
tensorflow = "2.4.0"
pandas = "1.0.1"
numpy = "1.19.2"
tensorflow-datasets = "3.2.1"
protobuf = "3.20.0"
tensorflow-addons = "0.11.2"
matplotlib = "3.1.3"
transformers = "3.0.2"
scikit-learn = "0.23.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
